# cbm-osa-ipo-map-kit

./: .gitignore  README.md  deploy.example.sh  pyproject.toml
.github/workflows/: leak-scan.yml  osa-v2-conformance.yml
data/maps/_template/: map.py
data/maps/demo-bakery/: map.py
examples/: xiaoyuan-public-content-experiment.v2.json
methodology/: 7-steps.md  recursion-v3.md  unified-information-engine-v4.md
ops/: card_triangle_scorer.py  map_loader.py
src/yuanli_osa_card/: __init__.py  cli.py  constants.py  engine.py  legacy_map_engine.py  migration.py
src/yuanli_osa_card/fixtures/: __init__.py  golden-unassessed-v2.json
src/yuanli_osa_card/schema/: yuanli-osa-card-v2.schema.json
tests/: test_legacy_retirement.py  test_osa_v2.py
